update model and admin

--- a/django_carousel/core/templates/photos.html
+++ b/django_carousel/core/templates/photos.html
@@ -71,6 +71,7 @@
           <img class="img-responsive center-block" src='{{ photo.image.url }}' alt="Image">
           <div class="carousel-caption">
             <h3>{{ photo.title }}</h3>
+            <p>{{ photo.description }}</p>
           </div>
         </div>
     {%endfor%}
