--- a/django_carousel/core/templates/photos.html
+++ b/django_carousel/core/templates/photos.html
@@ -11,22 +11,9 @@
 
     <title>Django Carousel Photo Gallery</title>
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap core CSS -->
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="http://getbootstrap.com/examples/starter-template/starter-template.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="http://getbootstrap.com/assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <style>
    .icon {
         color: #000000;    
@@ -46,7 +33,6 @@
 
 </style>
   </head>
-
   <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -56,41 +42,37 @@
           <a class="navbar-brand" href="/admin">Django Photo Gallery with Bootstrap Carousel</a>
         </div>
         </div><!--/.nav-collapse -->
-      </div>
     </nav>
     <br>
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-<div class="carousel-inner" role="listbox">
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
     {% for photo in photos %}   
       {% if forloop.first %}    
-        <div class="item active">
+        <div class="carousel-item active">
       {% else %}
-        <div class="item">
+        <div class="carousel-item">
       {% endif %}                   
           <img class="img-responsive center-block" src='{{ photo.image.url }}' alt="Image">
-          <div class="carousel-caption">
+          <div class="carousel-caption d-none d-md-block">
             <h3>{{ photo.title }}</h3>
             <p>{{ photo.description }}</p>
           </div>
         </div>
     {%endfor%}
 </div>
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left icon" aria-hidden="true"></span>
   </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right icon" aria-hidden="true"></span>
   </a>
 
 </div>
-
+</div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   </body>
 </html>
